# CP-1920

./: README.md
code/: CMakeLists.txt
code/src/: args.c  args.h  debug.c  debug.h  main.c  patterns.c  patterns.h  unit.c  unit.h
doc/: .gitignore  bare_jrnl_compsoc.tex  biblio.bib  cp2019-20_project_47590_48425.tex
tester/: .gitignore  grapher.py  tester.py
